# skillsdash

./: Cargo.toml  LICENSE  README.md  RELEASING.md  install.sh
.github/workflows/: ci.yml  publish-aur.yml  release.yml
Formula/: skillsdash.rb
packaging/aur/: PKGBUILD
scripts/: set-version.sh  update-aur.sh  update-formula.sh
src/: lib.rs  main.rs  tui.rs
src/market/: client.rs  github.rs  mod.rs
src/model/: frontmatter.rs  fsops.rs  harness.rs  mod.rs  registry.rs  skill.rs
src/ui/: actions.rs  app.rs  editor.rs  events.rs  market.rs  mod.rs  render.rs
tests/: mutations.rs  render.rs
