[package]
name = "skillsdash"
version = "0.1.0"
edition = "2021"
description = "A cross-platform TUI for managing AI skills across Claude and Agents providers"
license = "MIT"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tui-textarea = { version = "0.7", features = ["ratatui", "crossterm"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_norway = "0.9"
serde_json = "1"
ureq = { version = "2", features = ["json"] }
dirs = "6"
anyhow = "1"

[profile.release]
strip = true
lto = true
